// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`useCheckBigScreen return siteMetadata: big 1`] = `
<DocumentFragment>
  <div>
    BIG SCREEN
  </div>
</DocumentFragment>
`;

exports[`useCheckBigScreen return siteMetadata: small 1`] = `
<DocumentFragment>
  <div>
    SMALL SCREEN
  </div>
</DocumentFragment>
`;
